dataset1235/2025-2/805158916/users/3229587912/executions/1584167357_2935826613.log
== RUN (2025-08-27 15:06:58)
-- CODE: 
celsius = float(input())
fahrenheit =(9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:34)
-- CODE: 
celsius = (input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:28)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:08:29)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:54:27)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:55:21)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:06:59)
-- CODE: 
celsius = float(input())
fahrenheit =(9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:18:46)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) *celsius +32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:08:21)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:18:35)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) *celsius +32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:08:31)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:25)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:57:14)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:57:58)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:28)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:55:22)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:57:57)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:27)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:55:22)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:07:26)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:06:56)
-- CODE: 
celsius = float(input())
fahrenheit =(9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:08:32)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:06:57)
-- CODE: 
celsius = float(input())
fahrenheit =(9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:00:37)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,12)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:14)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:26)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:08:22)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:53:34)
-- CODE: 
celsius = (input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:57:56)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:08:20)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:24)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:23)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32)
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = (9/5) +32)
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:09:49)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:00:37)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5) +32
print(round(fahrenheit,12)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,12)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:07:13)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:10:38)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32
print(round)(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round)(fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:57:15)
-- CODE: 
celsius = float(input())
fahrenheit =(celsius*9/5)+32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:09:50)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) +32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
